# house_data

./: Avito.ui  README.md  flats.json  locator.py  main_old.py  main_window.ui  main_window_ui.py  parsing_avito_old.py  pyproject.toml
result/: all.csv  nevinnomissk.csv
